--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.4",
