--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,6 +10,6 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1"/>
   </ItemGroup>
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 </Project>
