--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -3,11 +3,13 @@
     <ProjectReference Include="..\Domain\Domain.csproj"/>
     <ProjectReference Include="..\Persistence\Persistence.csproj"/>
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup>&#xD;
    </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0"/>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/> 
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
