--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
@@ -23,7 +24,7 @@
     "react-dropzone": "^11.0.1",
     "react-final-form": "^6.3.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "react-toastify": "^5.3.2",
     "react-widgets": "^4.4.11",
     "react-widgets-date-fns": "^4.0.26",
