--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.23",
     "@types/react-cropper": "^1.3.0",
     "@types/react-dom": "16.8.4",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-widgets": "^4.3.3",
     "@types/revalidate": "^1.1.2",
@@ -23,6 +24,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^11.0.1",
     "react-final-form": "^6.3.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.1",
     "react-toastify": "^5.3.2",
