--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,6 +6,7 @@
     "@aspnet/signalr": "^1.1.4",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
+    "@types/openlayers": "^4.6.17",
     "@types/react": "16.8.23",
     "@types/react-cropper": "^1.3.0",
     "@types/react-dom": "16.8.4",
@@ -57,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "openlayers": "^4.6.5",
+    "react-openlayers": "^0.3.0"
   }
 }
